--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,9 @@ h1 {
     text-align: center;
     font-family: sans-serif;
 }
+
+#canvas {
+    width: 800px;
+    height: 600px;
+    background-color: grey;
+}
