--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@ h1 {
     font-family: sans-serif;
 }
 
+main {
+    width: 100%;
+    height: 100dvh;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
 #canvas {
     width: 800px;
     height: 600px;
